<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:background="#074973"
    android:paddingLeft="20dp"
    android:paddingTop="30dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <!-- Cuerpo de nuestra aplicación -->
    <!-- Absoluto:  android:layout_width="300dp"
                    android:layout_height="540dp" -->
    <!-- Realtivo:  android:layout_height="match_parent"
                    android:layout_width="match_parent" -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:weightSum="1">

        <!-- Titulo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            android:gravity="center_vertical|bottom"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/tvTitulo"
                style="@style/FontTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo" />

        </LinearLayout>

        <!--
        Pestañas:
            Recoger_datos
            Bluetooth
        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.78"
            android:background="@drawable/top_bg" >
            <TabHost android:id="@android:id/tabhost"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TabWidget android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@android:id/tabs" />

                    <FrameLayout android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@android:id/tabcontent"
                        android:background="#fff">

                        <!-- Pestaña: Recoger datos [Buffer, empezar y parar]-->
                        <LinearLayout android:id="@+id/tab1"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:weightSum="1"
                            android:gravity="center_horizontal"
                            android:paddingTop="25dp"
                            android:paddingBottom="5dp"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp">

                            <!-- Lectura de datos -->
                            <!-- ________________________________________________________________ -->
                            <!-- ________________________________________________________________ -->
                            <ScrollView
                                android:id="@+id/ScrConsola"
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:scrollbars="vertical"
                                android:fillViewport="true"
                                android:layout_weight="0.99"
                                android:layout_marginBottom="10dp">
                                <TextView
                                    android:id="@+id/tvConsola"
                                    android:text="@string/consola"
                                    android:layout_width="fill_parent"
                                    android:layout_height="fill_parent"
                                    android:background="#ddd"
                                    android:textColor="#111"
                                    android:padding="5dp" />
                            </ScrollView>

                            <Button
                                android:id="@+id/btnRecibir"
                                android:layout_width="wrap_content"
                                android:background="@drawable/boton_s"
                                style="@style/Boton"
                                android:text="@string/empez_lect" />

                            <!-- ________________________________________________________________ -->
                            <!-- ________________________________________________________________ -->
                        </LinearLayout>

                        <!-- Pestaña: Bluetooth [Todas las movidas]-->
                        <LinearLayout android:id="@+id/tab2"
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:weightSum="1"
                            android:gravity="center_horizontal"
                            android:paddingTop="25dp"
                            android:paddingBottom="5dp"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp">

                            <!-- Bluetooth -->
                            <!-- ________________________________________________________________ -->
                            <!-- ________________________________________________________________ -->

                            <Button
                                android:id="@+id/btnBluetooth"
                                android:layout_width="wrap_content"
                                android:background="@drawable/boton_s"
                                style="@style/Boton"
                                android:text="@string/ActivarBluetooth" />

                            <!-- <LinearLayout
                                android:layout_width="250dp"
                                android:layout_height="0dp"
                                android:layout_weight="0.99">
                                <ListView
                                    android:id="@+id/lvDispositivos"
                                    android:layout_width="fill_parent"
                                    android:layout_height="fill_parent" >
                                </ListView>
                            </LinearLayout>
                            -->
                            <ScrollView
                                android:id="@+id/ScrDispositivos"
                                android:layout_width="250dp"
                                android:layout_height="0dp"
                                android:scrollbars="vertical"
                                android:fillViewport="true"
                                android:layout_weight="0.99"
                                android:layout_marginBottom="10dp">
                                <ListView
                                    android:id="@+id/lvDispositivos"
                                    android:layout_width="fill_parent"
                                    android:layout_height="fill_parent" >
                                </ListView>
                            </ScrollView>


                            <Button
                                android:id="@+id/btnBuscarDispositivo"
                                android:layout_width="wrap_content"
                                android:background="@drawable/boton_s"
                                style="@style/Boton"
                                android:text="@string/buscar_dispositivo" />
                            <!-- ________________________________________________________________ -->
                            <!-- ________________________________________________________________ -->
                        </LinearLayout>

                    </FrameLayout>

                </LinearLayout>

            </TabHost>
        </LinearLayout>

        <!-- Pie [3G y dispositivo conexion] -->
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"
            android:layout_margin="0px"
            android:background="@drawable/foot_bg">

            <TextView
                android:id="@+id/tvConexion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sin_conexion" />
            <CheckBox
                android:id="@+id/cb_3g"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkBox_3g"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>

